# OS

./: .gitignore  CMakeLists.txt  Main.cpp  README.md
Creator/: CMakeLists.txt  Creator.cpp
K2/: CMakeLists.txt  main.cpp
Lab1/: Creator.cpp  README.md
Lab1/Main/: CMakeLists.txt
Lab1/Reporter/: Reporter.cpp
Lab1/Tests/: TestReporter.cpp
Lab1/core/: employee.h
Lab2/: CMakeLists.txt  README.md  lab2.cpp
Lab2/core/: array.cpp  array.h
Lab2/tests/: test_lab2.cpp
Lab2/threads/: thread.cpp  thread.h
Lab3/: CMakeLists.txt  README.md  core.h  main.cpp
Lab3/arr/: arr.cpp  arr.h
Lab3/marker/: marker.cpp  marker.h
Lab3/tests/: CMakeLists.txt  testMain.cpp  testThread.cpp
Lab3/threads/: threads.cpp  threads.h
Lab4/: CMakeLists.txt  README.md  message.h  shared_file.h
Lab4/receiver/: main_receiver.cpp  receiver.cpp  receiver.h
Lab4/sender/: main_sender.cpp  sender.cpp  sender.h
Lab4/tests/: CMakeLists.txt  test_message.cpp  test_shared_file.cpp
Lab5/: CMakeLists.txt  README.md
Lab5/Client/: client_main.cpp
Lab5/Client/Client/: Client.cpp  Client.h
Lab5/Core/Employee/: Employee.cpp  Employee.h  EmployeeTests.cpp
Lab5/Core/NamedPipe/: NamedPipe.cpp  NamedPipe.h
Lab5/Server/: server_main.cpp
Lab5/Server/ClientHandler/: ClientHandler.cpp  ClientHandler.h
Lab5/Server/EmployeeLockManager/: EmployeeLockManager.cpp  EmployeeLockManager.h
Lab5/Server/EmployeeRepository/: EmployeeRepository.cpp  EmployeeRepository.h  EmployeeRepositoryTests.cpp
Lab5/Server/Server/: Server.cpp  Server.h
Main/: .gitignore  Main.cpp
Reporter/: CMakeLists.txt  Reporter.cpp
Tests/: CMakeLists.txt  TestCreator.cpp  TestMain.cpp  TestReporter.cpp
Коллоквиум/: теория.txt
Коллоквиум/Factorial/: Fact.cpp  Fact.h  testFact.cpp
Коллоквиум/Linked list/: List.cpp  List.h  testList.cpp
Коллоквиум/List/: Arr.cpp  Arr.h  testArr.cpp
Коллоквиум2/: CMakeLists.txt  main.cpp  tests.cpp
Коллоквиум2/Database/: Database.cpp  Database.h
Коллоквиум2/Logger/: Logger.cpp  Logger.h
Коллоквиум2/Task/: Task.cpp  Task.h
